--- a/index.html
+++ b/index.html
@@ -10,10 +10,26 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <div id="main">Well hey there</div>
+    <div id="main">
+      <p>Well hey there</p>
+    <br>
+      <div id="lorem">
+        <p>
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam convallis diam, eget facilisis risus suscipit nec. Aenean sem purus, blandit ac diam ut, maximus congue urna. Maecenas ut pretium purus, eu molestie arcu. Etiam ac est sed lacus ultricies imperdiet. Cras pretium volutpat posuere. Curabitur faucibus gravida felis a lobortis. Vivamus id dui ut metus interdum fermentum vitae venenatis massa. Maecenas posuere congue eros.
+
+Vestibulum nec justo quis velit lobortis lacinia. Donec gravida tempus neque nec porttitor. Ut ac egestas neque. Sed pulvinar aliquam erat ut laoreet. Nulla vitae purus tempor arcu consectetur pretium. Etiam eu lacinia orci. Etiam in sagittis ante. Morbi ac enim sed lacus aliquet interdum a a tellus. Mauris et mollis enim. Pellentesque et erat vel lacus dignissim rhoncus. Integer ut tristique massa.
+
+Nam maximus sit amet lorem in pellentesque. Praesent varius, velit eget semper elementum, enim lectus malesuada orci, at ultrices massa turpis quis nibh. Etiam consequat sapien metus, nec maximus leo finibus id. Duis augue felis, lacinia at interdum in, tincidunt maximus lectus. Nam vehicula quam ut sapien mollis ullamcorper. Vivamus malesuada interdum nulla, id viverra quam bibendum at. Integer volutpat nulla non turpis molestie gravida. Integer nibh libero, commodo vel efficitur lacinia, accumsan vel libero. Aliquam venenatis tempor mi sagittis scelerisque. Etiam feugiat, nibh in consequat consectetur, elit tellus fermentum quam, quis condimentum est nunc ut elit. Pellentesque mollis magna interdum lorem fermentum, non semper quam vulputate.
+
+Nullam porttitor eleifend nunc, nec lobortis nisl vestibulum tempor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur eget semper est, nec tempus felis. Maecenas eleifend vestibulum eros, at dapibus ipsum dictum in. Nunc tellus sem, pretium nec nisl id, tempor feugiat lacus. Cras vehicula eleifend erat, quis pharetra elit tempus in. Nunc mauris felis, placerat sit amet tortor ac, tristique rutrum sem. Sed auctor, tellus non gravida efficitur, velit nisl venenatis turpis, nec laoreet nibh dolor ac eros. Curabitur a lorem nisi. Nam semper orci sit amet ex ultricies euismod. Ut bibendum lacus vel libero finibus, at sollicitudin ipsum laoreet. Donec id enim at risus varius ultricies.
+
+Fusce pellentesque porttitor nisi et consectetur. Maecenas iaculis sem ut sapien interdum pellentesque id sit amet justo. In hac habitasse platea dictumst. Cras in mauris elit. Nam sollicitudin dolor a eros rhoncus, sed consequat orci condimentum. In hac habitasse platea dictumst. Aenean et turpis ut felis lacinia venenatis ut sit amet purus. Integer fermentum, ipsum id luctus faucibus, turpis odio hendrerit ligula, vitae scelerisque augue massa porta lacus. In volutpat enim eget pharetra commodo. Duis et quam sit amet leo viverra ullamcorper. In et hendrerit neque. Integer molestie, odio vel semper tristique, neque magna vulputate quam, non posuere lacus odio eu eros. Nam nec posuere enim. Vivamus volutpat maximus dui, eget tristique felis elementum at. Maecenas quis dui a odio rutrum fermentum. </p>
+      </div>
+    </div>
     <!--react script section stays to close out the body tag-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
