Main Outline Set!
Did some base layouts for the main three pages, still want to go back and adjust layout for visibility and readability

--- a/index.html
+++ b/index.html
@@ -4,37 +4,214 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello PCA 2026!</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"/>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <div id="nav">
+      <ul id="links">
+        <li><a href="#">About Me</a></li>
+        <li><a href="hobbies.html">Hobbies</a></li>
+        <li><a href="faves.html">Faves</a></li>
+      </ul>
+    </div>
     <div id="main">
-      <p>Well hey there</p>
-    </div>
-    <br>
-      <div id="lorem">
+      <img src="img/selfie1.png" id="selfie" />
+      <div id="content">
         <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam convallis diam, eget facilisis risus suscipit nec. Aenean sem purus, blandit ac diam ut, maximus congue urna. Maecenas ut pretium purus, eu molestie arcu. Etiam ac est sed lacus ultricies imperdiet. Cras pretium volutpat posuere. Curabitur faucibus gravida felis a lobortis. Vivamus id dui ut metus interdum fermentum vitae venenatis massa. Maecenas posuere congue eros.
-
-Vestibulum nec justo quis velit lobortis lacinia. Donec gravida tempus neque nec porttitor. Ut ac egestas neque. Sed pulvinar aliquam erat ut laoreet. Nulla vitae purus tempor arcu consectetur pretium. Etiam eu lacinia orci. Etiam in sagittis ante. Morbi ac enim sed lacus aliquet interdum a a tellus. Mauris et mollis enim. Pellentesque et erat vel lacus dignissim rhoncus. Integer ut tristique massa.
-
-Nam maximus sit amet lorem in pellentesque. Praesent varius, velit eget semper elementum, enim lectus malesuada orci, at ultrices massa turpis quis nibh. Etiam consequat sapien metus, nec maximus leo finibus id. Duis augue felis, lacinia at interdum in, tincidunt maximus lectus. Nam vehicula quam ut sapien mollis ullamcorper. Vivamus malesuada interdum nulla, id viverra quam bibendum at. Integer volutpat nulla non turpis molestie gravida. Integer nibh libero, commodo vel efficitur lacinia, accumsan vel libero. Aliquam venenatis tempor mi sagittis scelerisque. Etiam feugiat, nibh in consequat consectetur, elit tellus fermentum quam, quis condimentum est nunc ut elit. Pellentesque mollis magna interdum lorem fermentum, non semper quam vulputate.
-
-Nullam porttitor eleifend nunc, nec lobortis nisl vestibulum tempor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur eget semper est, nec tempus felis. Maecenas eleifend vestibulum eros, at dapibus ipsum dictum in. Nunc tellus sem, pretium nec nisl id, tempor feugiat lacus. Cras vehicula eleifend erat, quis pharetra elit tempus in. Nunc mauris felis, placerat sit amet tortor ac, tristique rutrum sem. Sed auctor, tellus non gravida efficitur, velit nisl venenatis turpis, nec laoreet nibh dolor ac eros. Curabitur a lorem nisi. Nam semper orci sit amet ex ultricies euismod. Ut bibendum lacus vel libero finibus, at sollicitudin ipsum laoreet. Donec id enim at risus varius ultricies.
-
-Fusce pellentesque porttitor nisi et consectetur. Maecenas iaculis sem ut sapien interdum pellentesque id sit amet justo. In hac habitasse platea dictumst. Cras in mauris elit. Nam sollicitudin dolor a eros rhoncus, sed consequat orci condimentum. In hac habitasse platea dictumst. Aenean et turpis ut felis lacinia venenatis ut sit amet purus. Integer fermentum, ipsum id luctus faucibus, turpis odio hendrerit ligula, vitae scelerisque augue massa porta lacus. In volutpat enim eget pharetra commodo. Duis et quam sit amet leo viverra ullamcorper. In et hendrerit neque. Integer molestie, odio vel semper tristique, neque magna vulputate quam, non posuere lacus odio eu eros. Nam nec posuere enim. Vivamus volutpat maximus dui, eget tristique felis elementum at. Maecenas quis dui a odio rutrum fermentum. 
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+          malesuada vehicula nunc id suscipit. Ut eget arcu vitae justo molestie
+          lobortis lobortis vitae libero. In hac habitasse platea dictumst.
+          Morbi pretium egestas erat, eu maximus lacus tincidunt in. Mauris
+          euismod posuere fermentum. Aliquam porta vehicula orci, sed efficitur
+          nibh tincidunt eu. Cras vitae ultrices augue, a vulputate sem. Proin
+          porttitor sapien facilisis nisl placerat tincidunt. Etiam blandit sem
+          ex, sed volutpat arcu pellentesque vel. Nullam mollis eros quis mattis
+          faucibus. Donec ut bibendum velit, vitae elementum augue. Sed
+          fermentum ligula lacinia interdum porttitor. Interdum et malesuada
+          fames ac ante ipsum primis in faucibus. Morbi dictum arcu sit amet
+          elit venenatis, egestas tristique urna tempor. Integer sit amet est
+          pellentesque, vestibulum libero feugiat, lobortis lectus. Sed vel
+          malesuada purus, eu elementum massa. Nulla laoreet sit amet lacus eu
+          sagittis. Nam orci nibh, maximus mollis feugiat ut, maximus in risus.
+          Duis placerat dolor sagittis nibh suscipit, rutrum ultricies dui
+          aliquet. Ut malesuada ligula mauris, eget viverra enim elementum non.
+          Cras fringilla egestas tortor. Integer vitae faucibus metus. Nullam
+          tempor ac dui nec faucibus. Sed nec lorem eget turpis vulputate
+          sagittis. Donec egestas mauris eros, et varius nisl eleifend eu.
+          Mauris vitae bibendum eros, non tristique massa. Proin vel congue
+          quam, et viverra lectus. Nulla id commodo sapien. Duis viverra dui
+          blandit magna congue iaculis. Donec et metus iaculis, vulputate quam
+          id, suscipit dui. Maecenas congue aliquet dolor, vel blandit metus
+          tempor id. Curabitur vel ligula vitae quam facilisis consequat.
+          Aliquam fringilla lobortis maximus. Maecenas condimentum molestie
+          nulla, sit amet tempor odio consequat vitae. Phasellus placerat risus
+          sed augue sodales placerat. Morbi vel nisl vestibulum, congue metus
+          vel, pulvinar orci. Mauris tempor at libero vel dapibus. Cras gravida
+          volutpat purus, id auctor erat pretium ullamcorper. Integer fermentum
+          quis nisi at ullamcorper. Nam molestie, eros sed volutpat congue,
+          justo enim rutrum neque, vel ultrices orci turpis sed arcu. Vestibulum
+          ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+          curae; Mauris sapien erat, sollicitudin et posuere ac, ultrices a
+          diam. Phasellus fringilla, ligula cursus varius lobortis, ligula
+          tortor porttitor erat, quis convallis nibh erat et nisi. Aliquam nisi
+          nisi, ultricies nec tellus non, viverra lobortis magna. Duis dapibus
+          nulla nulla, eget vehicula turpis viverra et. Duis et luctus mauris,
+          vitae semper massa. Suspendisse non convallis ligula. Curabitur
+          gravida ultrices arcu et semper. Suspendisse potenti. Pellentesque
+          fermentum eleifend sem, sit amet varius ex congue et. Etiam ultrices
+          pellentesque sem. Nunc volutpat vitae ante id tempus. Morbi tempor
+          nisl vitae leo feugiat, vel euismod dui blandit. Phasellus hendrerit,
+          justo vulputate elementum finibus, felis justo imperdiet turpis, vitae
+          auctor elit libero ac elit. Nulla feugiat nisl vitae lacus molestie,
+          vel elementum arcu accumsan. Donec nec pulvinar ipsum, ac vehicula
+          libero. Duis at sapien viverra, condimentum sapien eget, pretium
+          lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Mauris malesuada vehicula nunc id suscipit. Ut eget arcu vitae justo
+          molestie lobortis lobortis vitae libero. In hac habitasse platea
+          dictumst. Morbi pretium egestas erat, eu maximus lacus tincidunt in.
+          Mauris euismod posuere fermentum. Aliquam porta vehicula orci, sed
+          efficitur nibh tincidunt eu. Cras vitae ultrices augue, a vulputate
+          sem. Proin porttitor sapien facilisis nisl placerat tincidunt. Etiam
+          blandit sem ex, sed volutpat arcu pellentesque vel. Nullam mollis eros
+          quis mattis faucibus. Donec ut bibendum velit, vitae elementum augue.
+          Sed fermentum ligula lacinia interdum porttitor. Interdum et malesuada
+          fames ac ante ipsum primis in faucibus. Morbi dictum arcu sit amet
+          elit venenatis, egestas tristique urna tempor. Integer sit amet est
+          pellentesque, vestibulum libero feugiat, lobortis lectus. Sed vel
+          malesuada purus, eu elementum massa. Nulla laoreet sit amet lacus eu
+          sagittis. Nam orci nibh, maximus mollis feugiat ut, maximus in risus.
+          Duis placerat dolor sagittis nibh suscipit, rutrum ultricies dui
+          aliquet. Ut malesuada ligula mauris, eget viverra enim elementum non.
+          Cras fringilla egestas tortor. Integer vitae faucibus metus. Nullam
+          tempor ac dui nec faucibus. Sed nec lorem eget turpis vulputate
+          sagittis. Donec egestas mauris eros, et varius nisl eleifend eu.
+          Mauris vitae bibendum eros, non tristique massa. Proin vel congue
+          quam, et viverra lectus. Nulla id commodo sapien. Duis viverra dui
+          blandit magna congue iaculis. Donec et metus iaculis, vulputate quam
+          id, suscipit dui. Maecenas congue aliquet dolor, vel blandit metus
+          tempor id. Curabitur vel ligula vitae quam facilisis consequat.
+          Aliquam fringilla lobortis maximus. Maecenas condimentum molestie
+          nulla, sit amet tempor odio consequat vitae. Phasellus placerat risus
+          sed augue sodales placerat. Morbi vel nisl vestibulum, congue metus
+          vel, pulvinar orci. Mauris tempor at libero vel dapibus. Cras gravida
+          volutpat purus, id auctor erat pretium ullamcorper. Integer fermentum
+          quis nisi at ullamcorper. Nam molestie, eros sed volutpat congue,
+          justo enim rutrum neque, vel ultrices orci turpis sed arcu. Vestibulum
+          ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+          curae; Mauris sapien erat, sollicitudin et posuere ac, ultrices a
+          diam. Phasellus fringilla, ligula cursus varius lobortis, ligula
+          tortor porttitor erat, quis convallis nibh erat et nisi. Aliquam nisi
+          nisi, ultricies nec tellus non, viverra lobortis magna. Duis dapibus
+          nulla nulla, eget vehicula turpis viverra et. Duis et luctus mauris,
+          vitae semper massa. Suspendisse non convallis ligula. Curabitur
+          gravida ultrices arcu et semper. Suspendisse potenti. Pellentesque
+          fermentum eleifend sem, sit amet varius ex congue et. Etiam ultrices
+          pellentesque sem. Nunc volutpat vitae ante id tempus. Morbi tempor
+          nisl vitae leo feugiat, vel euismod dui blandit. Phasellus hendrerit,
+          justo vulputate elementum finibus, felis justo imperdiet turpis, vitae
+          auctor elit libero ac elit. Nulla feugiat nisl vitae lacus molestie,
+          vel elementum arcu accumsan. Donec nec pulvinar ipsum, ac vehicula
+          libero. Duis at sapien viverra, condimentum sapien eget, pretium
+          lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Mauris malesuada vehicula nunc id suscipit. Ut eget arcu vitae justo
+          molestie lobortis lobortis vitae libero. In hac habitasse platea
+          dictumst. Morbi pretium egestas erat, eu maximus lacus tincidunt in.
+          Mauris euismod posuere fermentum. Aliquam porta vehicula orci, sed
+          efficitur nibh tincidunt eu. Cras vitae ultrices augue, a vulputate
+          sem. Proin porttitor sapien facilisis nisl placerat tincidunt. Etiam
+          blandit sem ex, sed volutpat arcu pellentesque vel. Nullam mollis eros
+          quis mattis faucibus. Donec ut bibendum velit, vitae elementum augue.
+          Sed fermentum ligula lacinia interdum porttitor. Interdum et malesuada
+          fames ac ante ipsum primis in faucibus. Morbi dictum arcu sit amet
+          elit venenatis, egestas tristique urna tempor. Integer sit amet est
+          pellentesque, vestibulum libero feugiat, lobortis lectus. Sed vel
+          malesuada purus, eu elementum massa. Nulla laoreet sit amet lacus eu
+          sagittis. Nam orci nibh, maximus mollis feugiat ut, maximus in risus.
+          Duis placerat dolor sagittis nibh suscipit, rutrum ultricies dui
+          aliquet. Ut malesuada ligula mauris, eget viverra enim elementum non.
+          Cras fringilla egestas tortor. Integer vitae faucibus metus. Nullam
+          tempor ac dui nec faucibus. Sed nec lorem eget turpis vulputate
+          sagittis. Donec egestas mauris eros, et varius nisl eleifend eu.
+          Mauris vitae bibendum eros, non tristique massa. Proin vel congue
+          quam, et viverra lectus. Nulla id commodo sapien. Duis viverra dui
+          blandit magna congue iaculis. Donec et metus iaculis, vulputate quam
+          id, suscipit dui. Maecenas congue aliquet dolor, vel blandit metus
+          tempor id. Curabitur vel ligula vitae quam facilisis consequat.
+          Aliquam fringilla lobortis maximus. Maecenas condimentum molestie
+          nulla, sit amet tempor odio consequat vitae. Phasellus placerat risus
+          sed augue sodales placerat. Morbi vel nisl vestibulum, congue metus
+          vel, pulvinar orci. Mauris tempor at libero vel dapibus. Cras gravida
+          volutpat purus, id auctor erat pretium ullamcorper. Integer fermentum
+          quis nisi at ullamcorper. Nam molestie, eros sed volutpat congue,
+          justo enim rutrum neque, vel ultrices orci turpis sed arcu. Vestibulum
+          ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+          curae; Mauris sapien erat, sollicitudin et posuere ac, ultrices a
+          diam. Phasellus fringilla, ligula cursus varius lobortis, ligula
+          tortor porttitor erat, quis convallis nibh erat et nisi. Aliquam nisi
+          nisi, ultricies nec tellus non, viverra lobortis magna. Duis dapibus
+          nulla nulla, eget vehicula turpis viverra et. Duis et luctus mauris,
+          vitae semper massa. Suspendisse non convallis ligula. Curabitur
+          gravida ultrices arcu et semper. Suspendisse potenti. Pellentesque
+          fermentum eleifend sem, sit amet varius ex congue et. Etiam ultrices
+          pellentesque sem. Nunc volutpat vitae ante id tempus. Morbi tempor
+          nisl vitae leo feugiat, vel euismod dui blandit. Phasellus hendrerit,
+          justo vulputate elementum finibus, felis justo imperdiet turpis, vitae
+          auctor elit libero ac elit. Nulla feugiat nisl vitae lacus molestie,
+          vel elementum arcu accumsan. Donec nec pulvinar ipsum, ac vehicula
+          libero. Duis at sapien viverra, condimentum sapien eget, pretium
+          lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Mauris malesuada vehicula nunc id suscipit. Ut eget arcu vitae justo
+          molestie lobortis lobortis vitae libero. In hac habitasse platea
+          dictumst. Morbi pretium egestas erat, eu maximus lacus tincidunt in.
+          Mauris euismod posuere fermentum. Aliquam porta vehicula orci, sed
+          efficitur nibh tincidunt eu. Cras vitae ultrices augue, a vulputate
+          sem. Proin porttitor sapien facilisis nisl placerat tincidunt. Etiam
+          blandit sem ex, sed volutpat arcu pellentesque vel. Nullam mollis eros
+          quis mattis faucibus. Donec ut bibendum velit, vitae elementum augue.
+          Sed fermentum ligula lacinia interdum porttitor. Interdum et malesuada
+          fames ac ante ipsum primis in faucibus. Morbi dictum arcu sit amet
+          elit venenatis, egestas tristique urna tempor. Integer sit amet est
+          pellentesque, vestibulum libero feugiat, lobortis lectus. Sed vel
+          malesuada purus, eu elementum massa. Nulla laoreet sit amet lacus eu
+          sagittis. Nam orci nibh, maximus mollis feugiat ut, maximus in risus.
+          Duis placerat dolor sagittis nibh suscipit, rutrum ultricies dui
+          aliquet. Ut malesuada ligula mauris, eget viverra enim elementum non.
+          Cras fringilla egestas tortor. Integer vitae faucibus metus. Nullam
+          tempor ac dui nec faucibus. Sed nec lorem eget turpis vulputate
+          sagittis. Donec egestas mauris eros, et varius nisl eleifend eu.
+          Mauris vitae bibendum eros, non tristique massa. Proin vel congue
+          quam, et viverra lectus. Nulla id commodo sapien. Duis viverra dui
+          blandit magna congue iaculis. Donec et metus iaculis, vulputate quam
+          id, suscipit dui. Maecenas congue aliquet dolor, vel blandit metus
+          tempor id. Curabitur vel ligula vitae quam facilisis consequat.
+          Aliquam fringilla lobortis maximus. Maecenas condimentum molestie
+          nulla, sit amet tempor odio consequat vitae. Phasellus placerat risus
+          sed augue sodales placerat. Morbi vel nisl vestibulum, congue metus
+          vel, pulvinar orci. Mauris tempor at libero vel dapibus. Cras gravida
+          volutpat purus, id auctor erat pretium ullamcorper. Integer fermentum
+          quis nisi at ullamcorper. Nam molestie, eros sed volutpat congue,
+          justo enim rutrum neque, vel ultrices orci turpis sed arcu. Vestibulum
+          ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+          curae; Mauris sapien erat, sollicitudin et posuere ac, ultrices a
+          diam. Phasellus fringilla, ligula cursus varius lobortis, ligula
+          tortor porttitor erat, quis convallis nibh erat et nisi. Aliquam nisi
+          nisi, ultricies nec tellus non, viverra lobortis magna. Duis dapibus
+          nulla nulla, eget vehicula turpis viverra et. Duis et luctus mauris,
+          vitae semper massa. Suspendisse non convallis ligula. Curabitur
+          gravida ultrices arcu et semper. Suspendisse potenti. Pellentesque
+          fermentum eleifend sem, sit amet varius ex congue et. Etiam ultrices
+          pellentesque sem. Nunc volutpat vitae ante id tempus. Morbi tempor
+          nisl vitae leo feugiat, vel euismod dui blandit. Phasellus hendrerit,
+          justo vulputate elementum finibus, felis justo imperdiet turpis, vitae
+          auctor elit libero ac elit. Nulla feugiat nisl vitae lacus molestie,
+          vel elementum arcu accumsan. Donec nec pulvinar ipsum, ac vehicula
+          libero. Duis at sapien viverra, condimentum sapien eget, pretium
+          lectus.
         </p>
+      </div>
     </div>
-    <!--react script section stays to close out the body tag-->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
+
+    <!--JS Script Links stay at bottom-->
     <script src="/scripts/main.js"></script>
   </body>
 </html>
