--- a/index.html
+++ b/index.html
@@ -4,210 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello PCA 2026!</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/altStyles.css" />
   </head>
   <body>
-    <div id="nav">
-      <ul id="links">
-        <li><a href="#">About Me</a></li>
-        <li><a href="hobbies.html">Hobbies</a></li>
-        <li><a href="faves.html">Faves</a></li>
-      </ul>
+    <!-- Header-->
+    <div id="header">
+      <div class="myName"><h1>Ian Brown</h2></div>
     </div>
-    <div id="main">
-      <img src="img/selfie1.png" id="selfie" />
-      <div id="content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-          malesuada vehicula nunc id suscipit. Ut eget arcu vitae justo molestie
-          lobortis lobortis vitae libero. In hac habitasse platea dictumst.
-          Morbi pretium egestas erat, eu maximus lacus tincidunt in. Mauris
-          euismod posuere fermentum. Aliquam porta vehicula orci, sed efficitur
-          nibh tincidunt eu. Cras vitae ultrices augue, a vulputate sem. Proin
-          porttitor sapien facilisis nisl placerat tincidunt. Etiam blandit sem
-          ex, sed volutpat arcu pellentesque vel. Nullam mollis eros quis mattis
-          faucibus. Donec ut bibendum velit, vitae elementum augue. Sed
-          fermentum ligula lacinia interdum porttitor. Interdum et malesuada
-          fames ac ante ipsum primis in faucibus. Morbi dictum arcu sit amet
-          elit venenatis, egestas tristique urna tempor. Integer sit amet est
-          pellentesque, vestibulum libero feugiat, lobortis lectus. Sed vel
-          malesuada purus, eu elementum massa. Nulla laoreet sit amet lacus eu
-          sagittis. Nam orci nibh, maximus mollis feugiat ut, maximus in risus.
-          Duis placerat dolor sagittis nibh suscipit, rutrum ultricies dui
-          aliquet. Ut malesuada ligula mauris, eget viverra enim elementum non.
-          Cras fringilla egestas tortor. Integer vitae faucibus metus. Nullam
-          tempor ac dui nec faucibus. Sed nec lorem eget turpis vulputate
-          sagittis. Donec egestas mauris eros, et varius nisl eleifend eu.
-          Mauris vitae bibendum eros, non tristique massa. Proin vel congue
-          quam, et viverra lectus. Nulla id commodo sapien. Duis viverra dui
-          blandit magna congue iaculis. Donec et metus iaculis, vulputate quam
-          id, suscipit dui. Maecenas congue aliquet dolor, vel blandit metus
-          tempor id. Curabitur vel ligula vitae quam facilisis consequat.
-          Aliquam fringilla lobortis maximus. Maecenas condimentum molestie
-          nulla, sit amet tempor odio consequat vitae. Phasellus placerat risus
-          sed augue sodales placerat. Morbi vel nisl vestibulum, congue metus
-          vel, pulvinar orci. Mauris tempor at libero vel dapibus. Cras gravida
-          volutpat purus, id auctor erat pretium ullamcorper. Integer fermentum
-          quis nisi at ullamcorper. Nam molestie, eros sed volutpat congue,
-          justo enim rutrum neque, vel ultrices orci turpis sed arcu. Vestibulum
-          ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-          curae; Mauris sapien erat, sollicitudin et posuere ac, ultrices a
-          diam. Phasellus fringilla, ligula cursus varius lobortis, ligula
-          tortor porttitor erat, quis convallis nibh erat et nisi. Aliquam nisi
-          nisi, ultricies nec tellus non, viverra lobortis magna. Duis dapibus
-          nulla nulla, eget vehicula turpis viverra et. Duis et luctus mauris,
-          vitae semper massa. Suspendisse non convallis ligula. Curabitur
-          gravida ultrices arcu et semper. Suspendisse potenti. Pellentesque
-          fermentum eleifend sem, sit amet varius ex congue et. Etiam ultrices
-          pellentesque sem. Nunc volutpat vitae ante id tempus. Morbi tempor
-          nisl vitae leo feugiat, vel euismod dui blandit. Phasellus hendrerit,
-          justo vulputate elementum finibus, felis justo imperdiet turpis, vitae
-          auctor elit libero ac elit. Nulla feugiat nisl vitae lacus molestie,
-          vel elementum arcu accumsan. Donec nec pulvinar ipsum, ac vehicula
-          libero. Duis at sapien viverra, condimentum sapien eget, pretium
-          lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Mauris malesuada vehicula nunc id suscipit. Ut eget arcu vitae justo
-          molestie lobortis lobortis vitae libero. In hac habitasse platea
-          dictumst. Morbi pretium egestas erat, eu maximus lacus tincidunt in.
-          Mauris euismod posuere fermentum. Aliquam porta vehicula orci, sed
-          efficitur nibh tincidunt eu. Cras vitae ultrices augue, a vulputate
-          sem. Proin porttitor sapien facilisis nisl placerat tincidunt. Etiam
-          blandit sem ex, sed volutpat arcu pellentesque vel. Nullam mollis eros
-          quis mattis faucibus. Donec ut bibendum velit, vitae elementum augue.
-          Sed fermentum ligula lacinia interdum porttitor. Interdum et malesuada
-          fames ac ante ipsum primis in faucibus. Morbi dictum arcu sit amet
-          elit venenatis, egestas tristique urna tempor. Integer sit amet est
-          pellentesque, vestibulum libero feugiat, lobortis lectus. Sed vel
-          malesuada purus, eu elementum massa. Nulla laoreet sit amet lacus eu
-          sagittis. Nam orci nibh, maximus mollis feugiat ut, maximus in risus.
-          Duis placerat dolor sagittis nibh suscipit, rutrum ultricies dui
-          aliquet. Ut malesuada ligula mauris, eget viverra enim elementum non.
-          Cras fringilla egestas tortor. Integer vitae faucibus metus. Nullam
-          tempor ac dui nec faucibus. Sed nec lorem eget turpis vulputate
-          sagittis. Donec egestas mauris eros, et varius nisl eleifend eu.
-          Mauris vitae bibendum eros, non tristique massa. Proin vel congue
-          quam, et viverra lectus. Nulla id commodo sapien. Duis viverra dui
-          blandit magna congue iaculis. Donec et metus iaculis, vulputate quam
-          id, suscipit dui. Maecenas congue aliquet dolor, vel blandit metus
-          tempor id. Curabitur vel ligula vitae quam facilisis consequat.
-          Aliquam fringilla lobortis maximus. Maecenas condimentum molestie
-          nulla, sit amet tempor odio consequat vitae. Phasellus placerat risus
-          sed augue sodales placerat. Morbi vel nisl vestibulum, congue metus
-          vel, pulvinar orci. Mauris tempor at libero vel dapibus. Cras gravida
-          volutpat purus, id auctor erat pretium ullamcorper. Integer fermentum
-          quis nisi at ullamcorper. Nam molestie, eros sed volutpat congue,
-          justo enim rutrum neque, vel ultrices orci turpis sed arcu. Vestibulum
-          ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-          curae; Mauris sapien erat, sollicitudin et posuere ac, ultrices a
-          diam. Phasellus fringilla, ligula cursus varius lobortis, ligula
-          tortor porttitor erat, quis convallis nibh erat et nisi. Aliquam nisi
-          nisi, ultricies nec tellus non, viverra lobortis magna. Duis dapibus
-          nulla nulla, eget vehicula turpis viverra et. Duis et luctus mauris,
-          vitae semper massa. Suspendisse non convallis ligula. Curabitur
-          gravida ultrices arcu et semper. Suspendisse potenti. Pellentesque
-          fermentum eleifend sem, sit amet varius ex congue et. Etiam ultrices
-          pellentesque sem. Nunc volutpat vitae ante id tempus. Morbi tempor
-          nisl vitae leo feugiat, vel euismod dui blandit. Phasellus hendrerit,
-          justo vulputate elementum finibus, felis justo imperdiet turpis, vitae
-          auctor elit libero ac elit. Nulla feugiat nisl vitae lacus molestie,
-          vel elementum arcu accumsan. Donec nec pulvinar ipsum, ac vehicula
-          libero. Duis at sapien viverra, condimentum sapien eget, pretium
-          lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Mauris malesuada vehicula nunc id suscipit. Ut eget arcu vitae justo
-          molestie lobortis lobortis vitae libero. In hac habitasse platea
-          dictumst. Morbi pretium egestas erat, eu maximus lacus tincidunt in.
-          Mauris euismod posuere fermentum. Aliquam porta vehicula orci, sed
-          efficitur nibh tincidunt eu. Cras vitae ultrices augue, a vulputate
-          sem. Proin porttitor sapien facilisis nisl placerat tincidunt. Etiam
-          blandit sem ex, sed volutpat arcu pellentesque vel. Nullam mollis eros
-          quis mattis faucibus. Donec ut bibendum velit, vitae elementum augue.
-          Sed fermentum ligula lacinia interdum porttitor. Interdum et malesuada
-          fames ac ante ipsum primis in faucibus. Morbi dictum arcu sit amet
-          elit venenatis, egestas tristique urna tempor. Integer sit amet est
-          pellentesque, vestibulum libero feugiat, lobortis lectus. Sed vel
-          malesuada purus, eu elementum massa. Nulla laoreet sit amet lacus eu
-          sagittis. Nam orci nibh, maximus mollis feugiat ut, maximus in risus.
-          Duis placerat dolor sagittis nibh suscipit, rutrum ultricies dui
-          aliquet. Ut malesuada ligula mauris, eget viverra enim elementum non.
-          Cras fringilla egestas tortor. Integer vitae faucibus metus. Nullam
-          tempor ac dui nec faucibus. Sed nec lorem eget turpis vulputate
-          sagittis. Donec egestas mauris eros, et varius nisl eleifend eu.
-          Mauris vitae bibendum eros, non tristique massa. Proin vel congue
-          quam, et viverra lectus. Nulla id commodo sapien. Duis viverra dui
-          blandit magna congue iaculis. Donec et metus iaculis, vulputate quam
-          id, suscipit dui. Maecenas congue aliquet dolor, vel blandit metus
-          tempor id. Curabitur vel ligula vitae quam facilisis consequat.
-          Aliquam fringilla lobortis maximus. Maecenas condimentum molestie
-          nulla, sit amet tempor odio consequat vitae. Phasellus placerat risus
-          sed augue sodales placerat. Morbi vel nisl vestibulum, congue metus
-          vel, pulvinar orci. Mauris tempor at libero vel dapibus. Cras gravida
-          volutpat purus, id auctor erat pretium ullamcorper. Integer fermentum
-          quis nisi at ullamcorper. Nam molestie, eros sed volutpat congue,
-          justo enim rutrum neque, vel ultrices orci turpis sed arcu. Vestibulum
-          ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-          curae; Mauris sapien erat, sollicitudin et posuere ac, ultrices a
-          diam. Phasellus fringilla, ligula cursus varius lobortis, ligula
-          tortor porttitor erat, quis convallis nibh erat et nisi. Aliquam nisi
-          nisi, ultricies nec tellus non, viverra lobortis magna. Duis dapibus
-          nulla nulla, eget vehicula turpis viverra et. Duis et luctus mauris,
-          vitae semper massa. Suspendisse non convallis ligula. Curabitur
-          gravida ultrices arcu et semper. Suspendisse potenti. Pellentesque
-          fermentum eleifend sem, sit amet varius ex congue et. Etiam ultrices
-          pellentesque sem. Nunc volutpat vitae ante id tempus. Morbi tempor
-          nisl vitae leo feugiat, vel euismod dui blandit. Phasellus hendrerit,
-          justo vulputate elementum finibus, felis justo imperdiet turpis, vitae
-          auctor elit libero ac elit. Nulla feugiat nisl vitae lacus molestie,
-          vel elementum arcu accumsan. Donec nec pulvinar ipsum, ac vehicula
-          libero. Duis at sapien viverra, condimentum sapien eget, pretium
-          lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Mauris malesuada vehicula nunc id suscipit. Ut eget arcu vitae justo
-          molestie lobortis lobortis vitae libero. In hac habitasse platea
-          dictumst. Morbi pretium egestas erat, eu maximus lacus tincidunt in.
-          Mauris euismod posuere fermentum. Aliquam porta vehicula orci, sed
-          efficitur nibh tincidunt eu. Cras vitae ultrices augue, a vulputate
-          sem. Proin porttitor sapien facilisis nisl placerat tincidunt. Etiam
-          blandit sem ex, sed volutpat arcu pellentesque vel. Nullam mollis eros
-          quis mattis faucibus. Donec ut bibendum velit, vitae elementum augue.
-          Sed fermentum ligula lacinia interdum porttitor. Interdum et malesuada
-          fames ac ante ipsum primis in faucibus. Morbi dictum arcu sit amet
-          elit venenatis, egestas tristique urna tempor. Integer sit amet est
-          pellentesque, vestibulum libero feugiat, lobortis lectus. Sed vel
-          malesuada purus, eu elementum massa. Nulla laoreet sit amet lacus eu
-          sagittis. Nam orci nibh, maximus mollis feugiat ut, maximus in risus.
-          Duis placerat dolor sagittis nibh suscipit, rutrum ultricies dui
-          aliquet. Ut malesuada ligula mauris, eget viverra enim elementum non.
-          Cras fringilla egestas tortor. Integer vitae faucibus metus. Nullam
-          tempor ac dui nec faucibus. Sed nec lorem eget turpis vulputate
-          sagittis. Donec egestas mauris eros, et varius nisl eleifend eu.
-          Mauris vitae bibendum eros, non tristique massa. Proin vel congue
-          quam, et viverra lectus. Nulla id commodo sapien. Duis viverra dui
-          blandit magna congue iaculis. Donec et metus iaculis, vulputate quam
-          id, suscipit dui. Maecenas congue aliquet dolor, vel blandit metus
-          tempor id. Curabitur vel ligula vitae quam facilisis consequat.
-          Aliquam fringilla lobortis maximus. Maecenas condimentum molestie
-          nulla, sit amet tempor odio consequat vitae. Phasellus placerat risus
-          sed augue sodales placerat. Morbi vel nisl vestibulum, congue metus
-          vel, pulvinar orci. Mauris tempor at libero vel dapibus. Cras gravida
-          volutpat purus, id auctor erat pretium ullamcorper. Integer fermentum
-          quis nisi at ullamcorper. Nam molestie, eros sed volutpat congue,
-          justo enim rutrum neque, vel ultrices orci turpis sed arcu. Vestibulum
-          ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-          curae; Mauris sapien erat, sollicitudin et posuere ac, ultrices a
-          diam. Phasellus fringilla, ligula cursus varius lobortis, ligula
-          tortor porttitor erat, quis convallis nibh erat et nisi. Aliquam nisi
-          nisi, ultricies nec tellus non, viverra lobortis magna. Duis dapibus
-          nulla nulla, eget vehicula turpis viverra et. Duis et luctus mauris,
-          vitae semper massa. Suspendisse non convallis ligula. Curabitur
-          gravida ultrices arcu et semper. Suspendisse potenti. Pellentesque
-          fermentum eleifend sem, sit amet varius ex congue et. Etiam ultrices
-          pellentesque sem. Nunc volutpat vitae ante id tempus. Morbi tempor
-          nisl vitae leo feugiat, vel euismod dui blandit. Phasellus hendrerit,
-          justo vulputate elementum finibus, felis justo imperdiet turpis, vitae
-          auctor elit libero ac elit. Nulla feugiat nisl vitae lacus molestie,
-          vel elementum arcu accumsan. Donec nec pulvinar ipsum, ac vehicula
-          libero. Duis at sapien viverra, condimentum sapien eget, pretium
-          lectus.
-        </p>
+
+    <div id="container">
+      <div id="main">
+        <div id="henshin">
+          <button onclick="changeAbout()">About Me</button>
+          <button onclick="changeHobbies()">Hobbies</button>
+          <button onclick="changeFaves()" alt="These are a few of my favorite things">Favorites</button>
+        </div>
+        <div id="textBody">
+          <p>Actual Dweeb that tends to be shy, kind of a dork Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sapiente voluptates, eos deleniti, voluptatibus assumenda culpa perspiciatis dolore incidunt cumque adipisci, animi quidem quasi. Possimus tempore ducimus non optio fuga.
+          </p>
+          <p>Loves breasts, anime, video games, and taking long naps. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sapiente voluptates, eos deleniti, voluptatibus assumenda culpa perspiciatis dolore incidunt cumque adipisci, animi quidem quasi. Possimus tempore ducimus non optio fuga.
+          </p>
+        </div>
+
+      </div>
+      <div id="side">
+        <img id="selfie" src="img/selfie1.png">
       </div>
     </div>
 
