--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div id="container">
       <div id="main">
         <div id="henshin">
-          <button onclick="changeAbout()">About Me</button>
-          <button onclick="changeHobbies()">Hobbies</button>
-          <button onclick="changeFaves()" alt="These are a few of my favorite things">Favorites</button>
+          <button id="btnAbout">About Me</button>
+          <button id="btnHobbies">Hobbies</button>
+          <button id="btnFaves" alt="These are a few of my favorite things">Favorites</button>
         </div>
         <div id="textBody">
           <p>Actual Dweeb that tends to be shy, kind of a dork Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sapiente voluptates, eos deleniti, voluptatibus assumenda culpa perspiciatis dolore incidunt cumque adipisci, animi quidem quasi. Possimus tempore ducimus non optio fuga.
