--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     </div>
 
     <!--JS Script Links stay at bottom-->
-    <script src="/scripts/main.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
