--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello PCA 2026!</title>
+    <title>Ian's Profile</title>
     <link rel="stylesheet" href="css/altStyles.css" />
   </head>
   <body>
     <!-- Header-->
     <div id="header">
-      <div class="myName"><h1>Ian Brown</h2></div>
+      <div class="title"><h1>Hello PCA 2026!</h2></div>
     </div>
 
     <div id="container">
@@ -17,19 +17,27 @@
         <div id="henshin">
           <button id="btnAbout">About Me</button>
           <button id="btnHobbies">Hobbies</button>
-          <button id="btnFaves" alt="These are a few of my favorite things">Favorites</button>
+          <button id="btnFaves">Favorites</button>
         </div>
         <div id="textBody">
-          <p>Actual Dweeb that tends to be shy, kind of a dork Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sapiente voluptates, eos deleniti, voluptatibus assumenda culpa perspiciatis dolore incidunt cumque adipisci, animi quidem quasi. Possimus tempore ducimus non optio fuga.
-          </p>
-          <p>Loves breasts, anime, video games, and taking long naps. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sapiente voluptates, eos deleniti, voluptatibus assumenda culpa perspiciatis dolore incidunt cumque adipisci, animi quidem quasi. Possimus tempore ducimus non optio fuga.
-          </p>
+            <h3>Ian Brown</h3>
+            <h1>Web Developer</h1>
+            <span>To be</span>
+            <p>Ian is a passionate, life long learner that is eager to embark on the next great chapter of his life.</p>
+            <p>Ian was born in Maryland, but moved to and grew up in Delaware from when he was five years old. He graduated from the University of Delaware in 2011 with a Bachelor of the Arts in the Fine Art program.</p>
+            <p>As someone who grew up with the internet, Ian's love of programming started small and familiar for a lot of his peers- on an up and coming website called Neopets™ that let you take basic HTML to your storefront and make it yours. This would later transition to MySpace™ making profile pages for people now using CSS.</p>
+            <p>As an adult, and still looking to do more, Ian went back to school and got an Associates in Computer Science at Del Tech University before ultimately landing at <span class="PHRG" title="I work here!">Power Home Remodeling Group</span> and joined their <span class="PHRG" title="This is my job!">Ninja Support Team</span> with the driving light of one day joining the PCA.</p>
         </div>
 
       </div>
       <div id="side">
-        <img id="selfie" src="img/selfie1.png">
+        <img id="selfie" src="img/selfie1.png" title="Wow, so handsome!">
       </div>
+    </div>
+
+    <div class="footer">
+      <a href="https://bulbapedia.bulbagarden.net/wiki/Scolipede_(Pok%C3%A9mon)" target="_blank" title="Clickable!" id="scoliCry">"I wanna be the very best like no one ever was" - Ash Ketchum</a>
+      <audio src="audio/scolipede.mp3" id="audioPlay"></audio>
     </div>
 
     <!--JS Script Links stay at bottom-->
